--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       fetch('./README.md').then(res => res.text()).then(text => {
         var converter = new showdown.Converter(),
         html      = converter.makeHtml(text);
-        document.getElementById('main').innerHtml = html;
+        document.getElementById('main').innerHTML = html;
       })
     </script>
   </body>
